@@ -257,5 +257,5 @@ int main(int argc, char **argv)
 
 	}
 
-	return 0;
+	return EXIT_SUCCESS;
 }
