@@ -2,6 +2,7 @@ Version 2.0.2
 ~~~~~~~~~~~~~
 Post 2.0.1
 Add new Mark5 states "booting", "recording" and "copyto"
+Add new Mark5 state "record"
 Add SMART monitor message type for disk diagnostics
   one document per disk (i.e., 8 per module)
 Change Condition message type to DriveStats
